src/type_/snapshots/geam__type___tests__reject_calling_non_function.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main() {\n  1()\n}\n\"#)"
---
Err(
    AnalyseError {
        error: NotCallable {
            type_: Named {
                module: "gleam",
                name: "Int",
                arguments: [],
            },
        },
        location: SrcSpan {
            start: 19,
            end: 22,
        },
    },
)
