src/type_/snapshots/geam__type___tests__reject_case_pattern_arity_mismatch.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main(a: Int, b: Int) {\n  case a, b {\n    x -> x\n  }\n}\n\"#)"
---
Err(
    AnalyseError {
        error: CasePatternArityMismatch {
            expected: 2,
            actual: 1,
        },
        location: SrcSpan {
            start: 49,
            end: 55,
        },
    },
)
