src/type_/snapshots/geam__type___tests__reject_case_pattern_type_mismatch.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main(value: Int) {\n  case value {\n    \"x\" -> 1\n    _ -> 0\n  }\n}\n\"#)"
---
Err(
    AnalyseError {
        error: TypeMismatch {
            expected: Named {
                module: "gleam",
                name: "String",
                arguments: [],
            },
            actual: Named {
                module: "gleam",
                name: "Int",
                arguments: [],
            },
        },
        location: SrcSpan {
            start: 46,
            end: 49,
        },
    },
)
