src/type_/snapshots/geam__type___tests__reject_empty_block.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main() {\n  {}\n}\n\"#)"
---
Err(
    AnalyseError {
        error: EmptyBlock,
        location: SrcSpan {
            start: 19,
            end: 21,
        },
    },
)
