src/type_/snapshots/geam__type___tests__reject_empty_function_body.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main() {\n}\n\"#)"
---
Err(
    AnalyseError {
        error: EmptyFunctionBody,
        location: SrcSpan {
            start: 0,
            end: 0,
        },
    },
)
