src/type_/snapshots/geam__type___tests__reject_type_hole_annotation.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main(value: _type) {\n  value\n}\n\"#)"
---
Err(
    AnalyseError {
        error: UnsupportedTypeHole {
            name: "_type",
        },
        location: SrcSpan {
            start: 20,
            end: 25,
        },
    },
)
