src/type_/snapshots/geam__type___tests__reject_type_mismatch_in_binop.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main() {\n  1 + \"x\"\n}\n\"#)"
---
Err(
    AnalyseError {
        error: TypeMismatch {
            expected: Named {
                module: "gleam",
                name: "Int",
                arguments: [],
            },
            actual: Named {
                module: "gleam",
                name: "String",
                arguments: [],
            },
        },
        location: SrcSpan {
            start: 23,
            end: 26,
        },
    },
)
