src/type_/snapshots/geam__type___tests__reject_unknown_import_module.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\nimport gleam/io\n\npub fn main(message: String) {\n  message\n}\n\"#)"
---
Err(
    AnalyseError {
        error: UnknownModule {
            module: "gleam/io",
        },
        location: SrcSpan {
            start: 1,
            end: 16,
        },
    },
)
