src/type_/snapshots/geam__type___tests__reject_unknown_imported_module_value.snap
---
source: src/type_/tests.rs
expression: "analyse_with(r#\"\nimport gleam/io\n\npub fn main(message: String) {\n  io.print(message)\n}\n\"#,\nio_imports(),)"
---
Err(
    AnalyseError {
        error: UnknownModuleValue {
            module: "gleam/io",
            value: "print",
        },
        location: SrcSpan {
            start: 54,
            end: 59,
        },
    },
)
