src/type_/snapshots/geam__type___tests__reject_unknown_local_variable.snap
---
source: src/type_/tests.rs
expression: "analyse(r#\"\npub fn main() {\n  value\n}\n\"#)"
---
Err(
    AnalyseError {
        error: UnknownVariable {
            name: "value",
        },
        location: SrcSpan {
            start: 19,
            end: 24,
        },
    },
)
